[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scripts/IntroMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/cutscenes/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/scripts/MenuLabel.gd" type="Script" id=3]
[ext_resource path="res://assets/gfx/pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/gfx/Copyright.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 4 )

[node name="IntroMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" parent="." instance=ExtResource( 2 )]

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="VBoxContainer" parent="MenuCanvas"]
margin_left = 54.7161
margin_top = 44.0
margin_right = 126.716
margin_bottom = 128.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblNewgame" type="Label" parent="MenuCanvas/HBoxContainer"]
margin_right = 72.0
margin_bottom = 18.0
focus_neighbour_top = NodePath("../LblQuit")
focus_neighbour_bottom = NodePath("../LblLoadGame")
custom_colors/font_color = Color( 0.878431, 0.941176, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.188235, 0.188235, 1 )
custom_constants/shadow_as_outline = 1
text = "New game"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="LblLoadGame" type="Label" parent="MenuCanvas/HBoxContainer"]
margin_top = 22.0
margin_right = 72.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../LblNewgame")
focus_neighbour_bottom = NodePath("../LblOptions")
custom_colors/font_color = Color( 0.878431, 0.941176, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.188235, 0.188235, 1 )
custom_constants/shadow_as_outline = 1
text = "Load game"
align = 1
valign = 1
script = ExtResource( 3 )
MenuAction = 1

[node name="LblOptions" type="Label" parent="MenuCanvas/HBoxContainer"]
margin_top = 44.0
margin_right = 72.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../LblLoadGame")
focus_neighbour_bottom = NodePath("../LblQuit")
custom_colors/font_color = Color( 0.878431, 0.941176, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.188235, 0.188235, 1 )
custom_constants/shadow_as_outline = 1
text = "Options"
align = 1
valign = 1
script = ExtResource( 3 )
MenuAction = 2

[node name="LblQuit" type="Label" parent="MenuCanvas/HBoxContainer"]
margin_top = 66.0
margin_right = 72.0
margin_bottom = 84.0
focus_neighbour_top = NodePath("../LblOptions")
focus_neighbour_bottom = NodePath("../LblNewgame")
custom_colors/font_color = Color( 0.878431, 0.941176, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.188235, 0.188235, 1 )
custom_constants/shadow_as_outline = 1
text = "Quit"
align = 1
valign = 1
script = ExtResource( 3 )
MenuAction = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuCanvas"]
margin_left = 44.7428
margin_top = 126.757
margin_right = 126.743
margin_bottom = 135.757
rect_pivot_offset = Vector2( 4.31976, 7.82753 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Sprite" parent="MenuCanvas/HBoxContainer2"]
position = Vector2( -7.74275, 3.24346 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MenuCanvas/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "REGRESSION WORKS 2020"

[node name="Timer" type="Timer" parent="."]
wait_time = 24.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
